# llm-eval-harness

./: .dvcignore  .gitignore  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  eval.yml
dashboard/: README.md  package-lock.json  package.json
dashboard/app/: TrendChart.tsx  layout.tsx  page.tsx
dashboard/data/: history.json
datasets/: .gitignore  golden-large.jsonl.dvc
docs/: architecture.md  dataset-versioning.md
examples/rag-app/: baseline.json  eval.yaml  predictions.jsonl
src/lleval/: __init__.py  cli.py  config.py  dataset.py  judge.py  report.py  runner.py
src/lleval/frameworks/: __init__.py  deepeval.py  promptfoo.py  ragas.py
src/lleval/metrics/: __init__.py  base.py  builtins.py  registry.py
tests/: test_cli.py  test_frameworks.py  test_metrics.py  test_runner_report.py
