[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lleval"
version = "0.1.0"
description = "Drop-in LLM evaluation harness with a CI regression gate."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Jean Malaquias" }]
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
lleval = "lleval.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/lleval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.run]
source = ["src/lleval"]
